@@ -32,7 +32,6 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.BULK_SCAN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_STAFF;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DATE_TIME_PATTERN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.D_MMM_YYYY;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HYPHEN_SEPARATOR;
@@ -47,9 +46,7 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ReviewDocumentService {
 
-    @Autowired
-    CoreCaseDataService coreCaseDataService;
-
+    private final CoreCaseDataService coreCaseDataService;
     public static final String DOCUMENT_SUCCESSFULLY_REVIEWED = "# Document successfully reviewed";
     public static final String DOCUMENT_IN_REVIEW = "# Document review in progress";
     private static final String REVIEW_YES = "### You have successfully reviewed this document"
@@ -73,12 +70,10 @@ public class ReviewDocumentService {
     public static final String REVIEW_DOC = "reviewDoc";
     public static final String LEGAL_PROF_UPLOAD_DOC_LIST_CONF_TAB = "legalProfUploadDocListConfTab";
     public static final String CAFCASS_UPLOAD_DOC_LIST_CONF_TAB = "cafcassUploadDocListConfTab";
-    public static final String COURT_STAFF_UPLOAD_DOC_LIST_CONF_TAB = "courtStaffUploadDocListConfTab";
     public static final String CITIZEN_UPLOAD_DOC_LIST_CONF_TAB = "citizenUploadDocListConfTab";
     public static final String BULKSCAN_UPLOAD_DOC_LIST_CONF_TAB = "bulkScannedDocListConfTab";
     public static final String LEGAL_PROF_UPLOAD_DOC_LIST_DOC_TAB = "legalProfUploadDocListDocTab";
     public static final String CAFCASS_UPLOAD_DOC_LIST_DOC_TAB = "cafcassUploadDocListDocTab";
-    public static final String COURT_STAFF_UPLOAD_DOC_LIST_DOC_TAB = "courtStaffUploadDocListDocTab";
     public static final String CITIZEN_UPLOADED_DOC_LIST_DOC_TAB = "citizenUploadedDocListDocTab";
     public static final String BULKSCAN_UPLOADED_DOC_LIST_DOC_TAB = "bulkScannedDocListDocTab";
     public static final String CONFIDENTIAL_CATEGORY_ID = "confidential";
@@ -104,16 +99,6 @@ public class ReviewDocumentService {
                                                .build())
                                            .toList());
         }
-        //court staff
-        if (CollectionUtils.isNotEmpty(caseData.getCourtStaffQuarantineDocsList())) {
-            dynamicListElements.addAll(caseData.getCourtStaffQuarantineDocsList().stream()
-                                           .map(element -> DynamicListElement.builder().code(element.getId().toString())
-                                               .label(element.getValue().getCourtStaffQuarantineDocument().getDocumentFileName()
-                                                          + HYPHEN_SEPARATOR + formatDateTime(DATE_TIME_PATTERN,
-                                                                                   element.getValue().getDocumentUploadedDate()))
-                                               .build())
-                                           .toList());
-        }
         if (CollectionUtils.isNotEmpty(caseData.getCitizenUploadQuarantineDocsList())) {
             dynamicListElements.addAll(caseData.getCitizenUploadQuarantineDocsList().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
@@ -122,7 +107,7 @@ public class ReviewDocumentService {
                                                    D_MMM_YYYY,
                                                    element.getValue().getDateCreated()
                                                ))
-                                               .build()).collect(Collectors.toList()));
+                                               .build()).toList());
         }
         if (CollectionUtils.isNotEmpty(caseData.getScannedDocuments())) {
             dynamicListElements.addAll(caseData.getScannedDocuments().stream()
@@ -133,7 +118,7 @@ public class ReviewDocumentService {
                                                    D_MMM_YYYY,
                                                    element.getValue().getScannedDate().toLocalDate()
                                                ))
-                                               .build()).collect(Collectors.toList()));
+                                               .build()).toList());
         }
         return dynamicListElements;
     }
@@ -152,62 +137,25 @@ public class ReviewDocumentService {
             if (null != caseData.getCafcassQuarantineDocsList()) {
                 cafcassQuarantineDocElement = getQuarantineDocumentById(caseData.getCafcassQuarantineDocsList(), uuid);
             }
-            //court staff
-            Optional<Element<QuarantineLegalDoc>> courtStaffQuarantineDocElement = Optional.empty();
-            if (null != caseData.getCourtStaffQuarantineDocsList()) {
-                courtStaffQuarantineDocElement = getQuarantineDocumentById(
-                    caseData.getCourtStaffQuarantineDocsList(),
-                    uuid
-                );
-            }
-            Optional<Element<UploadedDocuments>> quarantineCitizenDocElement = Optional.empty();
-            if (null != caseData.getCitizenUploadQuarantineDocsList()) {
-                quarantineCitizenDocElement = caseData.getCitizenUploadQuarantineDocsList().stream()
-                    .filter(element -> element.getId().equals(uuid)).findFirst();
-            }
-
-            if (quarantineLegalDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                    caseDataUpdated,
-                    quarantineLegalDocElement,
-                    LEGAL_PROFESSIONAL
-                );
-            } else if (cafcassQuarantineDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                    caseDataUpdated,
-                    cafcassQuarantineDocElement,
-                    CAFCASS
-                );
-            } else if (courtStaffQuarantineDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                    caseDataUpdated,
-                    courtStaffQuarantineDocElement,
-                    COURT_STAFF
-                );
-            } else if (quarantineCitizenDocElement.isPresent()) {
-                UploadedDocuments document = quarantineCitizenDocElement.get().getValue();
-                log.info("** citizen document ** {}", document);
-
-                String docTobeReviewed = formatDocumentTobeReviewed(
-                    document.getPartyName(),
-                    document.getDocumentType(),
-                    ""
-                );
-
-                caseDataUpdated.put(DOC_TO_BE_REVIEWED, docTobeReviewed);
-                caseDataUpdated.put(REVIEW_DOC, document.getCitizenDocument());
-            }
+            updateReviewdocs(
+                caseData,
+                caseDataUpdated,
+                uuid,
+                quarantineLegalDocElement,
+                cafcassQuarantineDocElement
+            );
             if (CollectionUtils.isNotEmpty(caseData.getScannedDocuments())) {
-                Optional<Element<QuarantineLegalDoc>> quarantineBulkscanDocElement = Optional.empty();
+                Optional<Element<QuarantineLegalDoc>> quarantineBulkscanDocElement;
                 quarantineBulkscanDocElement = Optional.of(
                     element(QuarantineLegalDoc.builder()
                                 .url(caseData.getScannedDocuments().stream()
                                          .filter(element -> element.getId().equals(uuid))
-                                         .collect(Collectors.toList()).get(0).getValue().getUrl()).build()));
+                                         .collect(Collectors.toList()).stream().findFirst().map(Element::getValue).map(
+                                        ScannedDocument::getUrl).orElse(null)).build()));
                 if (quarantineBulkscanDocElement.isPresent()) {
                     updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
                         caseDataUpdated,
-                        quarantineBulkscanDocElement,
+                        quarantineBulkscanDocElement.get(),
                         BULK_SCAN
                     );
                 }
@@ -215,11 +163,48 @@ public class ReviewDocumentService {
         }
     }
 
+    private void updateReviewdocs(CaseData caseData, Map<String, Object> caseDataUpdated, UUID uuid,
+                                  Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElement,
+                                  Optional<Element<QuarantineLegalDoc>> cafcassQuarantineDocElement) {
+        Optional<Element<UploadedDocuments>> quarantineCitizenDocElement = Optional.empty();
+        if (null != caseData.getCitizenUploadQuarantineDocsList()) {
+            quarantineCitizenDocElement = caseData.getCitizenUploadQuarantineDocsList().stream()
+                .filter(element -> element.getId().equals(uuid)).findFirst();
+        }
+
+        if (quarantineLegalDocElement.isPresent()) {
+            updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
+                caseDataUpdated,
+                quarantineLegalDocElement.get(),
+                LEGAL_PROFESSIONAL
+            );
+        } else if (cafcassQuarantineDocElement.isPresent()) {
+            updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
+                caseDataUpdated,
+                cafcassQuarantineDocElement.get(),
+                CAFCASS
+            );
+        } else if (quarantineCitizenDocElement.isPresent()) {
+            UploadedDocuments document = quarantineCitizenDocElement.get().getValue();
+            log.info("** citizen document ** {}", document);
+
+            String docTobeReviewed = formatDocumentTobeReviewed(
+                document.getPartyName(),
+                document.getDocumentType(),
+                ""
+            );
+
+            caseDataUpdated.put(DOC_TO_BE_REVIEWED, docTobeReviewed);
+            caseDataUpdated.put(REVIEW_DOC, document.getCitizenDocument());
+        }
+    }
+
     private void updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(Map<String, Object> caseDataUpdated,
-                                                                      Optional<Element<QuarantineLegalDoc>> quarantineDocElement,
+                                                                      Element<QuarantineLegalDoc> quarantineDocElement,
                                                                       String submittedBy) {
 
-        QuarantineLegalDoc document = quarantineDocElement.get().getValue();
+        QuarantineLegalDoc document = quarantineDocElement.getValue();
+        log.info("** Quarantine Doc ** {}", document);
 
         String docTobeReviewed = formatDocumentTobeReviewed(
             submittedBy,
@@ -237,10 +222,6 @@ public class ReviewDocumentService {
             case CAFCASS:
                 caseDataUpdated.put(REVIEW_DOC, document.getCafcassQuarantineDocument());
                 log.info(REVIEW_DOC + " {}", document.getCafcassQuarantineDocument());
-                break;
-            case COURT_STAFF:
-                caseDataUpdated.put(REVIEW_DOC, document.getCourtStaffQuarantineDocument());
-                log.info(REVIEW_DOC + " {}", document.getCourtStaffQuarantineDocument());
                 break;
             case BULK_SCAN:
                 caseDataUpdated.put(REVIEW_DOC, document.getUrl());
@@ -289,22 +270,12 @@ public class ReviewDocumentService {
 
     private Document getQuarantineDocument(String uploadedBy,
                                            QuarantineLegalDoc quarantineLegalDoc) {
-        switch (uploadedBy) {
-            case SOLICITOR:
-                return quarantineLegalDoc.getDocument();
-
-            case CAFCASS:
-                return quarantineLegalDoc.getCafcassQuarantineDocument();
-
-            case COURT_STAFF:
-                return quarantineLegalDoc.getCourtStaffQuarantineDocument();
-
-            case BULK_SCAN:
-                return quarantineLegalDoc.getUrl();
-
-            default:
-                return null;
-        }
+        return switch (uploadedBy) {
+            case SOLICITOR -> quarantineLegalDoc.getDocument();
+            case CAFCASS -> quarantineLegalDoc.getCafcassQuarantineDocument();
+            case BULK_SCAN -> quarantineLegalDoc.getUrl();
+            default -> null;
+        };
     }
 
     public void processReviewDocument(Map<String, Object> caseDataUpdated, CaseData caseData, UUID uuid) {
@@ -316,7 +287,6 @@ public class ReviewDocumentService {
         caseDataUpdated.put("legalProfQuarantineDocsList", caseData.getLegalProfQuarantineDocsList());
         caseDataUpdated.put("cafcassQuarantineDocsList", caseData.getCafcassQuarantineDocsList());
         caseDataUpdated.put("citizenUploadQuarantineDocsList", caseData.getCitizenUploadQuarantineDocsList());
-        caseDataUpdated.put("courtStaffQuarantineDocsList", caseData.getCourtStaffQuarantineDocsList());
         caseDataUpdated.put("scannedDocuments", caseData.getScannedDocuments());
     }
 
@@ -344,18 +314,6 @@ public class ReviewDocumentService {
                 caseData.getReviewDocuments().getCafcassUploadDocListConfTab(),
                 CAFCASS_UPLOAD_DOC_LIST_CONF_TAB,
                 CAFCASS
-            );
-        }
-        //court staff
-        if (null != caseData.getCourtStaffQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCourtStaffQuarantineDocsList(),
-                uuid,
-                true,
-                caseData.getReviewDocuments().getCourtStaffUploadDocListConfTab(),
-                COURT_STAFF_UPLOAD_DOC_LIST_CONF_TAB,
-                COURT_STAFF
             );
         }
         if (null != caseData.getCitizenUploadQuarantineDocsList()) {
@@ -409,24 +367,21 @@ public class ReviewDocumentService {
 
     private List<Element<QuarantineLegalDoc>> convertScannedDocumentsToQuarantineDocList(
         List<Element<ScannedDocument>> scannedDocumentElements, UUID uuid) {
-        List<Element<QuarantineLegalDoc>> quarantineLegalDocElementList = scannedDocumentElements.stream().map(
-            scannedDocumentElement -> {
-                ScannedDocument scannedDocument = scannedDocumentElement.getValue();
-                return element(uuid, QuarantineLegalDoc.builder()
-                    .fileName(scannedDocument.getFileName())
-                    .controlNumber(scannedDocument.getControlNumber())
-                    .type(scannedDocument.getType())
-                    .subtype(scannedDocument.getSubtype())
-                    .exceptionRecordReference(scannedDocument.getExceptionRecordReference())
-                    .url(scannedDocument.getUrl())
-                    //.document(scannedDocument.getUrl())
-                    .scannedDate(scannedDocument.getScannedDate())
-                    .deliveryDate(scannedDocument.getDeliveryDate())
-                    .build());
-
-
-            }).collect(Collectors.toList());
-        return quarantineLegalDocElementList;
+        return scannedDocumentElements.stream().map(
+                scannedDocumentElement -> {
+                    ScannedDocument scannedDocument = scannedDocumentElement.getValue();
+                    return element(uuid, QuarantineLegalDoc.builder()
+                            .fileName(scannedDocument.getFileName())
+                            .controlNumber(scannedDocument.getControlNumber())
+                            .type(scannedDocument.getType())
+                            .subtype(scannedDocument.getSubtype())
+                            .exceptionRecordReference(scannedDocument.getExceptionRecordReference())
+                            .url(scannedDocument.getUrl())
+                            //.document(scannedDocument.getUrl())
+                            .scannedDate(scannedDocument.getScannedDate())
+                            .deliveryDate(scannedDocument.getDeliveryDate())
+                            .build());
+                }).collect(Collectors.toList());
     }
 
     private void forReviewDecisionNo(CaseData caseData, Map<String, Object> caseDataUpdated, UUID uuid) {
@@ -458,20 +413,6 @@ public class ReviewDocumentService {
             );
 
             log.info("*** cafcass docs tab ** {}", caseDataUpdated.get(CAFCASS_UPLOAD_DOC_LIST_DOC_TAB));
-        }
-        //court staff
-        if (null != caseData.getCourtStaffQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCourtStaffQuarantineDocsList(),
-                uuid,
-                false,
-                caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab(),
-                COURT_STAFF_UPLOAD_DOC_LIST_DOC_TAB,
-                COURT_STAFF
-            );
-
-            log.info("*** court staff docs tab ** {}", caseDataUpdated.get(COURT_STAFF_UPLOAD_DOC_LIST_DOC_TAB));
         }
         if (null != caseData.getCitizenUploadQuarantineDocsList()) {
             Optional<Element<UploadedDocuments>> quarantineCitizenDocElementOptional = caseData.getCitizenUploadQuarantineDocsList().stream()
@@ -511,7 +452,6 @@ public class ReviewDocumentService {
 
     public ResponseEntity<SubmittedCallbackResponse> getReviewResult(CaseData caseData) {
         if (CollectionUtils.isEmpty(caseData.getLegalProfQuarantineDocsList())
-            && (CollectionUtils.isEmpty(caseData.getCourtStaffQuarantineDocsList()))
             && CollectionUtils.isEmpty(caseData.getCitizenUploadQuarantineDocsList())
             && CollectionUtils.isEmpty(caseData.getCafcassQuarantineDocsList())) {
             coreCaseDataService.triggerEvent(
